[gd_scene load_steps=8 format=3 uid="uid://cqy5x3h8qn7kj"]

[ext_resource type="Script" uid="uid://dvo5jfekhw7vl" path="res://systems/goap/debug/ui/goap_debug_overlay.gd" id="1_goap_overlay"]
[ext_resource type="PackedScene" uid="uid://bxm5k8oapqr2s" path="res://systems/goap/debug/ui/panels/agent_state_panel.tscn" id="2_agent_state"]
[ext_resource type="PackedScene" uid="uid://cn7sas4t2uvwx" path="res://systems/goap/debug/ui/panels/blackboard_inspector.tscn" id="3_blackboard"]
[ext_resource type="PackedScene" uid="uid://d2w8f5h6kakpq" path="res://systems/goap/debug/ui/panels/plan_visualizer.tscn" id="4_plan_viz"]
[ext_resource type="PackedScene" uid="uid://b8m3n5p7rarst" path="res://systems/goap/debug/ui/panels/timeline_viewer.tscn" id="5_timeline"]
[ext_resource type="PackedScene" uid="uid://dav4x7y205abc" path="res://systems/goap/debug/ui/panels/performance_monitor.tscn" id="6_perf"]
[ext_resource type="PackedScene" uid="uid://d3t8vav2w5xef" path="res://systems/goap/debug/ui/panels/event_log.tscn" id="7_event_log"]

[node name="GOAPDebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 800.0
script = ExtResource("1_goap_overlay")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "GOAP Debug Overlay [F3 to toggle]"
vertical_alignment = 1

[node name="AgentLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Agent:"
vertical_alignment = 1

[node name="AgentSelector" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "X"
flat = true

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="AgentState" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 0

[node name="AgentStatePanel" parent="Panel/MarginContainer/VBoxContainer/TabContainer/AgentState" instance=ExtResource("2_agent_state")]
unique_name_in_owner = true
layout_mode = 2

[node name="Blackboard" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 1

[node name="BlackboardInspector" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Blackboard" instance=ExtResource("3_blackboard")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlanVisualizer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 2

[node name="PlanVisualizer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/PlanVisualizer" instance=ExtResource("4_plan_viz")]
unique_name_in_owner = true
layout_mode = 2

[node name="Timeline" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 3

[node name="TimelineViewer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Timeline" instance=ExtResource("5_timeline")]
unique_name_in_owner = true
layout_mode = 2

[node name="Performance" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 4

[node name="PerformanceMonitor" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Performance" instance=ExtResource("6_perf")]
unique_name_in_owner = true
layout_mode = 2

[node name="EventLog" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_tab_index = 5

[node name="EventLog" parent="Panel/MarginContainer/VBoxContainer/TabContainer/EventLog" instance=ExtResource("7_event_log")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Header/CloseButton" to="." method="hide"]
